# slack-exporter

./: .cz.yaml  .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: lib.rs
core/: Cargo.toml
src/: cli.rs  config.rs  logger.rs  main.rs
src/resources/: default_config.toml
tests/: cli.rs
utils/: Cargo.toml
utils/src/: app_config.rs  error.rs  logger.rs  types.rs
