[package]
name = "slack-exporter"
version = "0.1.0"
edition = "2021"
authors = ["David Drugeon-Hamon <zebeurton@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ddrugeon/slack-exporter"
homepage = "https://github.com/ddrugeon/slack-exporter"
categories = ["command-line-utilities"]
default-run = "slack-exporter"
rust-version = "1.76.0"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.81"
assert_cmd = "2.0.14"
predicates = "3.1.0"
pretty_assertions = "1.4.0"
