[package]
name = "slack-exporter"
version = "0.1.0"
edition = "2021"
authors = ["David Drugeon-Hamon <zebeurton@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ddrugeon/slack-exporter"
homepage = "https://github.com/ddrugeon/slack-exporter"
categories = ["command-line-utilities"]
default-run = "slack-exporter"
rust-version = "1.76.0"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/bin/main.rs"
name = "slack-exporter"

[dependencies]
clap = { version = "4.5.2", features = ["derive", "env", "wrap_help", "cargo", "color", "help"] }
reqwest = { version = "0.11.26", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
dotenv = { version = "0.15.0", features = ["clap"] }
figment = { version = "0.10.14", features = ["env", "json", "toml", "yaml"] }
flexi_logger = "0.27.4"
log = "0.4.21"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
pretty_assertions = "1.4.0"
