[package]
name = "slack-exporter"
version = "0.1.0"
edition = "2021"
authors = ["David Drugeon-Hamon <zebeurton@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ddrugeon/slack-exporter"
homepage = "https://github.com/ddrugeon/slack-exporter"
categories = ["command-line-utilities"]
keywords = ["cli", "slack"]
default-run = "slack-exporter"
rust-version = "1.76.0"
description = """
slack-exporter helps to export messages and files of one or more slack channel.
"""
[workspace]
members = ["utils", "cli", "core"]

[dependencies]
utils = { path = "utils" }
cli = { path = "cli" }
core = { path = "core" }
log = "0.4.21"


[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
pretty_assertions = "1.4.0"
